--- a/archive.html
+++ b/archive.html
@@ -16,7 +16,9 @@ layout: default
             <ul>
         {% endif %}
     {% endunless %}
-    <li><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d" }} - {{ post.title }}</a></li>
+    <li>
+        <a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d" }} - {{ post.title }}</a>
+    </li>
 {% endfor %}
 </ul>
 </div>
