--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@ layout: default
 <div class="article">
     <div class="well">
         <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d, %Y" }} - {{ post.title }}</a></h1>
+        
+        <p>
+        <small>
+        tags:
+            {% for tag in post.tags %}
+                {% if forloop.last %}
+                <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }}</a></span>
+                {% else %}
+                <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }},</a></span>
+                {% endif %}
+            {% endfor %}
+        </small>
+        </p>
+
         {% if site.comments == true and post.comments == true and site.disqus != '' %}
           <p class="author"><a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">Comments</a></p>
         {% endif %}
