Tags messed up.

--- a/alltags.html
+++ b/alltags.html
@@ -3,14 +3,16 @@ layout: default
 ---
 <div class="well">
 
+    <!--
 {% capture tags %}
     {% for tag in site.tags %}
         {{ tag[0] }}
     {% endfor %}
 {% endcapture %}
 {% assign sortedtags = tags | split:' ' | sort %}
+-->
 
-{% for tag in sortedtags %}
+{% for tag in site.tags %}
     <h3>{{ tag }}</h3>
     <ul>
         {% for post in site.tags[tag] %}
