Better support for tags. Tags with spaces should be replaced with underscores in the markdown file as well as their tags page. Upon rendering, the underscores are replaced with spaces. This also means no tags should have actual underscores in them.

--- a/alltags.html
+++ b/alltags.html
@@ -3,17 +3,15 @@ layout: default
 ---
 <div class="well">
 
-    <!--
 {% capture tags %}
     {% for tag in site.tags %}
-        {{ tag[0] }}
+    {{ tag[0] }}
     {% endfor %}
 {% endcapture %}
 {% assign sortedtags = tags | split:' ' | sort %}
--->
 
-{% for tag in site.tags %}
-    <h3>{{ tag }}</h3>
+{% for tag in sortedtags %}
+    <h3>{{ tag | replace:'_',' ' }}</h3>
     <ul>
         {% for post in site.tags[tag] %}
         <li>
