--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@ layout: default
         tags:
             {% for tag in post.tags %}
                 {% if forloop.last %}
-                <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }}</a></span>
+                <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag | split:'_' | join:' ' }}</a></span>
                 {% else %}
-                <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }},</a></span>
+                <span><a href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag | split:'_' | join:' ' }},</a></span>
                 {% endif %}
             {% endfor %}
         </small>
